# atlassian-cli

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  atlassian.spec  install.ps1  install.sh  pyoxidizer.bzl  pyproject.toml
.github/scripts/: build-linux-compatible.sh  build-pyoxidizer-artifact.py  generate_release_notes.py  package_release_archive.py
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-19-atlassian-cli-v1-server-dc.md  2026-04-20-atlassian-cli-config-headers-command-substitution.md  2026-04-20-atlassian-cli-header-injection.md  2026-04-20-atlassian-cli-product-config-auto-selection.md  (+21 more)
src/atlassian_cli/: __init__.py  cli.py  compat.py  main.py  update.py
tests/: test_cli_context.py  test_cli_help.py  test_env_command.py  test_init_command.py  test_project_metadata.py  test_readme.py  test_update.py
tests/auth/: test_headers.py
tests/config/: test_env_interpolation.py  test_header_substitution.py  test_loader.py  test_resolver.py  test_ssh_accept_env.py  test_template.py  test_writer.py
tests/core/: test_errors.py
tests/e2e/: conftest.py  coverage_manifest.py  test_bitbucket_live.py  test_confluence_live.py  test_coverage_manifest.py  test_jira_live.py  test_support.py
tests/e2e/support/: __init__.py  (+7 more)
tests/integration/: test_smoke.py
tests/models/: test_base.py
tests/output/: test_interactive.py  test_markdown.py  test_modes.py  test_renderers.py  test_tty.py
tests/products/: test_factory.py  test_header_providers.py
tests/release/: test_install_script.py  test_pyinstaller_spec.py  test_release_workflow.py
(+172 files in other folders)
