[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlassian-cli"
version = "0.1.0"
description = "CLI for Atlassian Server and Data Center products"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "atlassian-python-api>=4.0.7",
  "pydantic>=2.12.0",
  "PyYAML>=6.0.2",
  "rich>=14.0.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
atlassian = "atlassian_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atlassian_cli"]
