[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlassian-cli"
version = "0.1.0"
description = "CLI for Atlassian Server and Data Center products"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "atlassian-python-api>=4.0.7",
  "Pygments>=2.13.0",
  "markdownify>=1.2.2",
  "prompt_toolkit>=3.0.51",
  "pydantic>=2.12.0",
  "PyYAML>=6.0.2",
  "rich>=14.0.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pyinstaller>=6.16.0",
  "pytest>=8.3.0",
  "ruff>=0.11.8",
]

[project.scripts]
atlassian = "atlassian_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atlassian_cli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
  "e2e: live end-to-end tests that hit real Atlassian instances",
]
